# large_model

./: README.md  main.py  pyproject.toml
day02/: bike_day.py  day02.py  gd.py  knn.py
day03/: 1.decisition_tree_demo.ipynb  decision_tree.py  kmeans_demo.py
day05/: pubg.py  pubg_rf.py
day06/: alex_net.py
doc/: qa.md
