[project]
name = "large-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipython>=8.14.0",
    "matplotlib==3.9.4",
    "tensorflow==2.19.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
